@@ -152,18 +152,19 @@
                     </filesets>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-            <!--&lt;!&ndash;Somehow crashes with ERRAI marshalling&ndash;&gt;-->
-            <!--<inherited>true</inherited>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-compiler-plugin</artifactId>-->
-            <!--<version>3.5.1</version>-->
-            <!--<configuration>-->
-            <!--<compilerArguments>-->
-            <!--<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>-->
-            <!--</compilerArguments>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <version>${gwt.version}</version>
+                <configuration>
+                    <logLevel>INFO</logLevel>
+                    <noServer>true</noServer>
+                    <extraJvmArgs>-Xmx2048m -XX:CompileThreshold=7000 -XX:MaxPermSize=512M</extraJvmArgs>
+                    <runTarget>webgl.html</runTarget>
+                    <hostedWebapp>src/main/webapp</hostedWebapp>
+                    <strict>true</strict>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
